<resources>
    <string name="app_name">MA PMO</string>
    <string name="login_lbl_heading">MENARA AGUNG \nMobile Parts Ordering</string>
    <string name="login_lbl_sub_heading">Salam SATU HATI, Silakan masukkan akun untuk \nmengakses Aplikasi</string>
    <string name="login_lbl_title">Login</string>
    <string name="login_lbl_username">Username</string>
    <string name="login_lbl_password">Password</string>
    <string name="login_lbl_btn_submit">Login</string>
    <string name="login_lbl_alert_form">Harap lengkapi form</string>
    <string name="login_lbl_loading">Logging in&#8230;</string>
    <string name="login_lbl_iduser">ID User</string>
    <string name="login_lbl_hint_iduser">ID User&#8230;</string>
    <string name="forgot_lbl_info_forgot_email">Masukkan alamat email Anda, informasi kata sandi akan dikirim ke alamat email</string>
    <string name="hint_type_email">type email...</string>
    <string name="lbl_loading_harap_tunggu">Harap Tunggu..</string>
    <string name="logout_lbl_loading">Logging out&#8230;</string>
    <string name="wallboard_lbl_follow_up_prospek">Follow Up\nProspek</string>
    <string name="wallboard_lbl_follow_up_spk">Follow Up\nSPK</string>
    <string name="wallboard_lbl_follow_up_nsales">Follow Up Sales</string>
    <string name="sales_lbl_prospek">Prospek</string>
    <string name="sales_lbl_spk">SPK</string>
    <string name="sales_lbl_sales">Sales</string>
    <string name="sales_lbl_belum_fu">Belum FU</string>
    <string name="stock_lbl_stok">Stok</string>
    <string name="stock_apparel_lbl_ukuran">Ukuran</string>
    <string name="stock_apparel_lbl_material">Material</string>
    <string name="stock_apparel_lbl_warna">Warna</string>
    <string name="activity_lbl_spk_document_incomplete">%1$d/\%2$d Document Incomplete</string>
    <string name="unit_lbl_informasi_warna">Informasi Warna</string>
    <string name="unit_lbl_available">Available</string>
    <string name="token_expired_lbl_title">Sesi anda telah berakhir, harap lakukan login ulang. Terimakasih.</string>
    <string name="token_expired_lbl_password">Password</string>
    <string name="token_expired_lbl_dialog_renew">Renew</string>
    <string name="token_expired_lbl_dialog_logout">Logout</string>
    <string name="token_expired_lbl_dialog_empty">Harap masukan password anda sebelum melakukan renew</string>
    <string name="fcm_default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="error_fill_empty_field">Isi form ini terlebih dahulu</string>
    <string name="error_server">Sorry, there is problem with server. Please try again.</string>
    <string name="error_disconnect">Sorry, there is network or server problem. Please try again.</string>
    <string name="error_network">Sorry, there is network problem. Please try again.</string>
    <string name="error_no_data">Sorry, there is no data now. Please try again later.</string>
    <string name="error_no_data_leaderboard">Sorry, there is no data for leaderboard at this time.</string>
    <string name="lbl_form_required">Isi form yang kosong terlebih dahulu</string>
    <string name="lbl_form_select_required">Fill the select field first</string>
    <string name="toolbar_inbox">Inbox</string>
    <string name="toolbar_leaderboard">Papan Peringkat</string>
    <string name="toolbar_kalendar_aktivitas">Kalendar Aktivitas</string>
    <string name="toolbar_cek_stok">Cek Stock</string>
    <string name="toolbar_sales">Sales</string>
    <string name="toolbar_spk">SPK</string>
    <string name="toolbar_detail_unit">Detail Unit</string>
    <string name="toolbar_accessories">Accessories</string>
    <string name="toolbar_subtitle_accessories">%1$d Barang</string>
    <string name="toolbar_detail_perlengkapan">Detail Perlengkapan</string>
    <string name="toolbar_stock_search">Pencarian Stock</string>
    <string name="toolbar_data_pelanggan">Data Pelanggan</string>
    <string name="toolbar_new_prospek">Buat Prospek Baru</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_title_logout">Keluar?</string>
    <string name="dialog_content_logout">Anda akan keluar dari akun, lanjutkan?</string>
    <string name="dialog_title_delete_cart">Hapus?</string>
    <string name="dialog_content_delete_cart">Anda akan menghapus cart ini, lanjutkan?</string>
    <string name="dialog_lbl_title">Title Dialog</string>
    <string name="dialog_lbl_cancel">Cancel</string>
    <string name="dialog_lbl_ok">OK</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_search">Search</string>
    <string name="btn_favorite">Favorite</string>
    <string name="btn_cart_add">Cart Add</string>
    <string name="btn_filter">Filter</string>
    <string name="btn_target_produk">Target Per Produk</string>
    <string name="btn_submit">Submit</string>
    <string name="home_lbl_leaderboard_rank">1 %1$s&lt;sup&gt;%2$s th&lt;/sup&gt;</string>
    <string name="hint_type_username">type username&#8230;</string>
    <string name="hint_type_password">type password&#8230;</string>
    <string name="hint_search_sales">Search Sales</string>
    <string name="hint_search">Search..</string>
    <string name="leaderboard_lbl_point">Point</string>
    <string name="profile_lbl_elearning">E-learning</string>
    <string name="spinner_lbl_loading">- Mengambil data -</string>
    <string name="spinner_lbl_filter_year_error">- Tidak ada Data ditemukan -</string>
    <string name="spinner_lbl_filter_year_select">- Pilih Tahun -</string>
    <string name="sales_hint_search_lbl_cari_unit">Cari Unit</string>
    <string name="stock_lbl_aksesoris">Aksesoris</string>
    <string name="toolbar_info_pelanggan">Informasi Pelanggan</string>
    <string name="hint_NIK">NIK</string>
    <string name="hint_NamaProspek">Nama Prospek</string>
    <string name="hint_telp">No. Telp</string>
    <string name="hint_tanggalProspek">Tanggal Prospek</string>
    <string name="hint_pilih_dari_data_pelanggan">Pilih dari Data Pelanggan</string>
    <string name="foto_pelanggan">Foto Pelanggan</string>
    <string name="foto_pelanggan_di_lokasi">Foto pelanggan di lokasi</string>
    <string name="hint_no_ktp">No. KTP</string>
    <string name="hint_alamat">Alamat</string>
    <string name="optional">Optional</string>
    <string name="hint_alamat_kantor">Alamat Kantor</string>
    <string name="hint_notelp_kantor">No. Telp Kantor</string>
    <string name="hint_pref_uji_perjalanan">Preferensi Uji Perjalanan</string>
    <string name="hint_pilih_product">Pilih Produk</string>
    <string name="emptyState_produk">Tidak ada produk di sini, silakan tambahkan produk terlebih dahulu</string>
    <string name="grand_total">Grand Total</string>
    <string name="empty">-</string>
    <string name="hint_carinamanik">Cari nama pelanggan/NIK</string>
    <string name="data_pelanggan">Data Pelanggan</string>
    <string name="hint_carialamat">Tag Lokasi Alamat</string>
    <string name="hint_tag_location">Atur pin lokasi pada posisi yang tepat</string>
    <string name="hint_searchlocation">Search here...</string>
    <string name="error_cant_use_location">Error Can\'t use location</string>
    <string name="api_google_2">AIzaSyCbhDZBiY_9-bTxsym_Ho4ZEM1pzJqtO1U</string>
    <string name="activity_lbl_add_product">Add Product</string>
    <string name="produk_lbl_total_unit">Total Unit</string>
    <string name="produk_lbl_total_accessories">Total Accessories (%1$d)</string>
    <string name="produk_lbl_total_perlengkapan">Total Perlengkapan (%1$d)</string>
    <string name="produk_lbl_grand_total">Grand Total</string>
    <string name="message_state_hint_search_customer">Silahkan ketik nama pelanggan untuk mencari</string>
    <string name="hint_prospect_pekerjaan">Pekerjaan</string>
    <string name="hint_customer_tipe_unit">Kode Tipe Unit</string>
    <string name="toast_error_empty_foto">Silahkan lengkapi form foto terlebih dahulu</string>
    <string name="prospek_lbl_kartu_keluarga">Kartu Keluarga</string>
    <string name="prospek_lbl_lihat_dokumen">Lihat Dokumen</string>
    <string name="hint_prospek_rencana_pembelian">Rencana Pembelian</string>
    <string name="prospect_lbl_lampirkan_file">Lampirkan File</string>
    <string name="dialog_lbl_title_kode_unit_tipe">Kode Unit Tipe</string>
    <string name="produk_lbl_prospek_amp_spk"><![CDATA[Prospek & SPK]]></string>
    <string name="btn_add">Add</string>
    <string name="action_update_cart">Update Cart</string>
    <string name="product_lbl_qty">Qty</string>
    <string name="action_no_deal">No Deal</string>
    <string name="action_deal">Deal</string>
    <string name="action_ganti_status">Ganti Status</string>
    <string name="prospect_customer_lbl_lihat_dashboard_pelanggan">Lihat dashboard pelanggan</string>
    <string name="action_contact">Contact</string>
    <string name="customer_lbl_informasi_pelanggan">Informasi Pelanggan</string>
    <string name="customer_lbl_informasi_detail_pelanggan">Informasi Detail Pelanggan</string>
    <string name="customer_lbl_keperluan_dokumen">Keperluan Dokumen</string>
    <string name="customer_lbl_daftar_follow_up">Daftar Follow Up</string>
    <string name="lbl_home_salesman_rank">SALESMAN RANK</string>
    <string name="lbl_home_pencapaian">Pencapaian</string>
    <string name="lbl_home_produktivitas">Produktivitas</string>
    <string name="lbl_home_pencapaian_ncampaign_toko">Pencapaian \nCampaign Toko</string>
    <string name="lbl_home_realisasi_visit_nactual_target_n_realisasi">Realisasi Visit  \nActual/Target/ \n%Realisasi</string>
    <string name="lbl_home_efektifitas_visit_nactual_target_n_efektifitas">Efektifitas Visit \nActual/Target/ \n%Efektifitas</string>
    <string name="lbl_title_catalogue">Catalogue</string>
    <string name="lbl_catalogue_md_catalogue">MD Catalogue</string>
    <string name="lbl_dealer_competitior">Competitior</string>
    <string name="lbl_dealer_salesman_visit">Salesman Visit</string>
    <string name="lbl_dealer_title">Dealer</string>
    <string name="lbl_order_title">Order</string>
    <string name="lbl_order_ongoing_order">Ongoing Order</string>
    <string name="lbl_order_history">Order History</string>
    <string name="hint_search_parts_similarity">Similarity</string>
    <string name="hint_search_parts_part_number">Part Number</string>
    <string name="lbl_search_parts_info_header">Silakan isi minimal 2 field dengan 5 digit kata kunci pencarian</string>
    <string name="hint_search_parts_part_deskripsi">Part Deskripsi</string>
    <string name="hint_search_parts_kelompok_barang">Kelompok Barang</string>
    <string name="hint_search_parts_type_motor_part">Type Motor Part</string>
    <string name="btn_search_part">Search Part</string>
    <string name="lbl_empty_state">Tidak ada data \nyang dapat ditampilkan</string>
    <string name="lbl_error_network_state">Kesalahan jaringan\nPastikan koneksi Anda stabil</string>
    <string name="lbl_error_server">Ada sesuatu yang salah\nDengan Server</string>
    <string name="state_token_exp">Harap klik refresh\nsetelah memperbarui token</string>
    <string name="hint_cari_tipe_motor">Cari Tipe Motor</string>
    <string name="lbl_title_campaign_promo">Campaign Promo</string>
    <string name="lbl_tab_brosur_promo">Brosur Promo</string>
    <string name="lbl_tab_part_promo">Part Promo</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_dialog_bottom_part_add">Ingin Menambahkan Part?</string>
    <string name="lbl_anda_ingin_menambahkan_part_darimana">Anda ingin menambahkan part \ndarimana?</string>
    <string name="btn_suggest_order">Suggest Order</string>
    <string name="lbl_forgot_password">Lupa Password?</string>
    <string name="btn_kirim">Kirim</string>
    <string name="lbl_lupa_password">Lupa Password</string>
</resources>